Added links to homepage and addStudent pages

--- a/pages/students.ejs
+++ b/pages/students.ejs
@@ -1,4 +1,11 @@
 <h1>Students</h1>
+
+<!-- Back to Home -->
+<p><a href="/">Back to Home</a></p>
+
+<!-- Link to Add Student Page -->
+<p><a href="/addStudent">Add Student</a></p>
+
 <table border="1">
   <thead>
     <tr>
