Added links to student.ejs to update

--- a/pages/students.ejs
+++ b/pages/students.ejs
@@ -12,6 +12,7 @@
       <th>Student ID</th>
       <th>Name</th>
       <th>Age</th>
+      <th>Update</th>
     </tr>
   </thead>
   <tbody>
@@ -20,6 +21,8 @@
       <td><%= student.sid %></td>
       <td><%= student.name %></td>
       <td><%= student.age %></td>
+      <!-- Link to Update -->
+      <td><a href="/updateStudent/<%= student.sid %>">Update</a></td>
     </tr>
     <% }); %>
   </tbody>
