Update to index.js. sid captures student id. I needed to export pool in the mysql.js also

--- a/pages/students.ejs
+++ b/pages/students.ejs
@@ -22,7 +22,7 @@
       <td><%= student.name %></td>
       <td><%= student.age %></td>
       <!-- Link to Update -->
-      <td><a href="/updateStudent/<%= student.sid %>">Update</a></td>
+      <td><a href="/students/edit/<%= student.sid %>">Update</a></td>
     </tr>
     <% }); %>
   </tbody>
