--- a/pages/updateStudent.ejs
+++ b/pages/updateStudent.ejs
@@ -1,1 +1,14 @@
-<h1>Update</h1>
+<h1>Update Student</h1>
+
+<!-- Form to update student details -->
+<form action="/students/update/<%= student.sid %>" method="POST">
+    <label for="name">Name:</label>
+    <input type="text" id="name" name="name" value="<%= student.name %>" required><br><br>
+
+    <label for="age">Age:</label>
+    <input type="number" id="age" name="age" value="<%= student.age %>" required><br><br>
+
+    <button type="submit">Update Student</button>
+</form>
+
+<p><a href="/students">Back to Students</a></p>
