addStudent created. I needed to make changes to index.js and I had some redundant update code

--- a/pages/students.ejs
+++ b/pages/students.ejs
@@ -4,7 +4,7 @@
 <p><a href="/">Back to Home</a></p>
 
 <!-- Link to Add Student Page -->
-<p><a href="/addStudent">Add Student</a></p>
+<p><a href="/students/add">Add Student</a></p>
 
 <table border="1">
   <thead>
